--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
             <!-- TODO: Put the pigeons in love MP4 video here-->
             <video controls>
                 <source src="assets/videos/pigeons-in-love.mp4">
-                <track>
-                WEBVTT: Bird cooing
-                00:00:03.500 --> 00:00:04.500
-                Bird cooing
-                </track>
+                <track 
+                    src="assets\text-tracks\pidgeons-in-love.vtt"
+                    kind="Subtitles"
+                    srclang="English"
+                    label="English Subtitles" />
+                <track 
+                    src="assets\text-tracks\pidgeons-in-love.vtt"
+                    kind="Subtitles"
+                    srclang="French"
+                    label="French Subtitles" />
             </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
